@@ -66,6 +66,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Make rev_deleted log entries more intelligible.
 * Logs are grouped under date headings similar to enhanced changes list
 * (6943) Added PAGESINCATEGORY: magic word
+* (13624) Fix regression with manual thumb= parameter on images
 
 
 === Bug fixes in 1.13 ===
